fixed spacing issues for grid and header

--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -9,7 +9,7 @@
 @media (max-width: 860px) {
   .grid {
     grid-template-columns: 1fr;
-    margin-bottom: 120px;
+    margin-top: 100px;
     max-width: 420px;
     text-align: center;
   }
